--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <h2>Фотограф<br>
 Александра Швецова</h2>
       <p>Забронировать съемку можно позвонив по телефону:
-<strong>89880117473</strong>
+<strong>8(988)0117473</strong>
 или написав сообщение в одну из социальных сетей:</p>
       <a href="https://vk.com/fotalexrom" target="_blank"><div class="icon-vk"></div></a>
       <a href="#"><div class="icon-fb"></div></a>
